--- a/site/css/index.css
+++ b/site/css/index.css
@@ -1,7 +1,11 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: TT Norms W01 Regular, helvetica, sans-serif;
+    font-family: 'Dosis';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 10px;
     background-color: #2E5941;
 }
 
@@ -18,6 +22,7 @@ body {
 .header .container {
     display: flex;
     justify-content: space-between;
+    
 }
 
 .header .container .titulo{
