--- a/site/css/filmes.css
+++ b/site/css/filmes.css
@@ -72,76 +72,64 @@ body {
 
 
 .filmes .container {
-    margin-top: 40px;
+    margin-top: 60px;
+    margin-bottom: 60px;
     display: flex;
     flex-direction: column;
     justify-items: center;
     gap: 40px;
 }
 
-.filmes .container .cima {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-}
-
-.filmes .container .baixo {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-}
-
-.card {
-    width: 240px;
-    height: 290px;
-    background-color: #D9D9D9;
-    padding: 0px;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-    box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
-    font-weight: 600;
-    font-weight: 700;
-}
-
-.card span {
-    font-style: normal;
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 10px;
-}
-
 .filmes a {
     text-decoration: none;
     color: black;
 }
-/* 
-.banner {
-    height: fit-content;
-    
-    display: flex;
-    justify-content: center;
-    background-image: URL();
-    background-size: cover;
 
+.linha {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
 }
 
-.banner .container {
-    width: 750px;
-    padding-bottom: 200px;
-    font-size: 36px;
-    display: flex;
-    justify-content: center;
+.linha a {
+    width: 40%;
 }
 
-.banner .container span {
+.card {
+    height: 290px;
+    background-color: #EBEFE6;
+    border-radius: 10px;
+    padding: 15px;
 
-    background-color: white;
-    font-weight: bold;
-    border: #052c6f solid;
-    border-radius: 20px;
-    text-align: center;
-} */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+    box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.card .agora {
+    font-weight: 700;
+}
+
+.capa {
+    width: 100%;
+    height: 100%;
+}
+
+.info {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.info span {
+    font-style: normal;
+    font-size: 18px;
+    line-height: 20px;
+}
+
+.sinopse {
+    text-align: justify;
+}
