--- a/site/css/saga.css
+++ b/site/css/saga.css
@@ -70,38 +70,106 @@ body {
     color: black;
 }
 
-.filmes .container {
+.filme .container {
     margin-top: 40px;
-    display: flex;
+    margin-bottom: 40px;
     flex-direction: column;
-    justify-items: center;
-    gap: 40px;
+    gap: 35px;
+}
+
+.filme a {
+    text-decoration: none;
+    color: black;
+}
+
+.botoes {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.botao {
+    background-color: #A01818;
+    width: 100px;
+    padding: 15px;
+    font-family: 'Dosis';
+    font-size: 18px;
+    color: #EBEFE6;
+    border: 3px solid #000000;
+    border-radius: 50px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.quadro {
+    height: fit-content;
+    background-color: #EBEFE6;
+    border-radius: 40px;
+    box-shadow: inset 4px 4px 4px rgba(0, 0, 0, 0.25);
+    padding: 55px;
 }
 
 .card {
-    width: 240px;
-    height: 290px;
-    background-color: #D9D9D9;
-    padding: 0px;
-
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 20px;
-    box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
-    font-weight: 600;
-    font-weight: 700;
+    gap: 60px;
 }
 
-.card span {
+.card .agora {
+    font-weight: bold;
+    font-size: 32px;
+}
+
+.info {
+    height: 572px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.info span {
     font-style: normal;
-    font-weight: 700;
     font-size: 20px;
-    line-height: 10px;
+    line-height: 20px;
 }
 
-.filmes a {
-    text-decoration: none;
-    color: black;
+.sinopse {
+    width: 80%;
+    height: auto;
+    word-wrap: normal;
+}
+
+.curiosidades {
+    margin-top: 60px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 55px;
+}
+
+.curiosidades .nome {
+    margin-bottom: 15px;
+}
+
+.curiosidades .agora {
+    font-weight: bold;
+    font-size: 32px;
+}
+
+.linha {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+}
+
+.tamanho {
+    width: 400px;
+    word-wrap: break-word;
+    text-align: center;
 }
