--- a/site/css/personagens.css
+++ b/site/css/personagens.css
@@ -70,78 +70,74 @@ body {
     color: black;
 }
 
+.quadro {
+    width: 100%;
+    align-items: center;
+    justify-items: center;
+    justify-content: center;
+}
 
-.filmes .container {
-    margin-top: 40px;
+.quadro a {
+    text-decoration: none;
+}
+
+.quadro .container {
+    height: 100%;
+    margin-top: 60px;
+    margin-bottom: 25px;
     display: flex;
     flex-direction: column;
     justify-items: center;
-    gap: 40px;
+    align-items: center;
+    gap: 60px;
 }
 
-.filmes .container .cima {
+.linha {
+    width: 100%;
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-}
-
-.filmes .container .baixo {
-    display: flex;
-    flex-direction: row;
     justify-content: space-around;
 }
 
 .card {
-    width: 240px;
-    height: 290px;
-    background-color: #D9D9D9;
-    padding: 0px;
-
+    font-weight: 700;
+    background: #EBEFE6;
+    border-radius: 10px;
+    box-shadow: inset 4px 4px 4px rgba(0, 0, 0, 0.25);
     display: flex;
     flex-direction: column;
+    align-items: center;
+    padding: 15px;
+    gap: 10px;
+    font-size: 18px;
+}
+
+.botoes {
+    display: flex;
+    gap: 40px;
+}
+
+.botao {
+    width: 80px;
+    height: 80px;
+    display: flex;
     justify-content: center;
     align-items: center;
-    gap: 20px;
-    box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
-    font-weight: 600;
-    font-weight: 700;
-}
-
-.card span {
-    font-style: normal;
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 10px;
-}
-
-.filmes a {
-    text-decoration: none;
-    color: black;
-}
-/* 
-.banner {
-    height: fit-content;
-    
-    display: flex;
-    justify-content: center;
-    background-image: URL();
-    background-size: cover;
-
-}
-
-.banner .container {
-    width: 750px;
-    padding-bottom: 200px;
-    font-size: 36px;
-    display: flex;
-    justify-content: center;
-}
-
-.banner .container span {
-
-    background-color: white;
-    font-weight: bold;
-    border: #052c6f solid;
-    border-radius: 20px;
     text-align: center;
-} */
+    border-radius: 35px;
+    text-decoration: none;
+    font-family: 'Dosis';
+    font-size: 32px;
+    border: 1px solid;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.preto {
+    background: #000000;
+    color: #EBEFE6;
+}
+
+.branco {
+    background: #EBEFE6;
+    color: #000000;
+}
