--- a/site/public/dashboard/css/menu.css
+++ b/site/public/dashboard/css/menu.css
@@ -88,7 +88,7 @@ body {
 .botoes {
     width: 100%;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
 }
 
@@ -113,13 +113,21 @@ body {
 
 /* começa a brincadeira*/
 .area {
-    height: 100%;
+    height: 100vh;
     width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex-direction: column;;
 
+}
+
+.container {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .topo {
