--- a/site/public/dashboard/css/quiz.css
+++ b/site/public/dashboard/css/quiz.css
@@ -1,11 +1,49 @@
+.area {
+    justify-content: center;
+    align-items: center;
+}
+
 .container {
-    height: 100vh;
-    width: 75%;
+    width: 80%;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-around;
 }
+
+.topo {
+    height: auto;
+    margin-top: 0;
+}
+
+.conteudo {
+    width: 90%;
+    padding: 50px 30px;
+    background: #EBEFE6;
+    border-radius: 30px;
+    text-align: center;
+    height: fit-content;
+    font-size: 28px;
+    line-height: 40px;
+    font-weight: 600;
+}
+
+.comoFunciona {
+    font-weight: lighter;
+    text-align: justify;
+    word-wrap: break-word;
+}
+
+.container .botoes {
+    justify-content: space-around;
+    height: fit-content;
+}
+
+.botoes .jogoQ {
+    background: #EBEFE6;
+}
+
+
+
 
 .quiz {
     width: 100%;
@@ -49,7 +87,7 @@
     font-size: 30px;
 }
 
-.container .botao {
+.container .botao{
     background: #2E5941;
     border-radius: 30px;
     border: none;
