--- a/site/public/dashboard/css/estatistica.css
+++ b/site/public/dashboard/css/estatistica.css
@@ -1,22 +1,76 @@
 .area {
+    justify-content: center;
+    align-items: center;
+}
+
+.bh {
     width: 80%;
+    height: 90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.topo {
+    height: fit-content;
+    margin-top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.pontuacao {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
 }
 
 .conteudo {
     width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
+.media {
+    width: 20%;
+    padding: 15px 32px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    text-align: center;
+    background: #EBEFE6;
+    border-radius: 30px;
+}
+
+.textoMinigame {
+    display: flex;
+    width: 80%;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.textoQuiz {
+    display: flex;
+    width: 80%;
+    justify-content: space-around;
+    align-items: center;
+}
 
 .area .botoes {
     width: 100%;
-    justify-content: space-between;
+    height: fit-content;
+    justify-content: space-around;
     display: flex;
     border-radius: 30px;
 }
 
 .graficos {
-    background-color: antiquewhite;
-    color: white;
+    width: 38%;
+    background-color: #EBEFE6;
+    color: black;
+    border-radius: 30px;
+    padding: 15px 25px;
 }
+
